Refactor code be